--- a/ComparisonThm/Proj7.tex
+++ b/ComparisonThm/Proj7.tex
@@ -56,7 +56,7 @@
 \newcommand{\linktoprf}[1]{\hyperlink{#1}{To complete proof.}}
 \newcommand{\targetprf}[1]{\hypertarget{#1}{Proof of \autoref{#1}}}
 
-\title{Note 6: Comparison theorems on Riemannian geometry}
+\title{Note 6: Comparison Theorems in Riemannian Geometry}
 \date{} % 显示日期
 
 \renewcommand\refname{Reference}
