--- a/ComparisonThm/Proj6.tex
+++ b/ComparisonThm/Proj6.tex
@@ -204,7 +204,7 @@ there may be no global frame on $M$.
     $$
 \end{lemma}
 From the Gauss Lemma, the boundary of a normal ball is a hypersurface (submanifold of codimension $1$) in $M$ 
-orthogonal to the geodesics that start from $p$ and is called the  geodesic sphere at $p$. Besides, $\exp_*$ is isometric in the radical direction. 
+orthogonal to the geodesics that start from $p$ and is called the geodesic sphere at $p$. Besides, $\exp_*v$ is isometric along the direction of $v$. 
 
 \subsection*{Induced covariant derivatives}
 
